--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "debug": "^2.2.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "lowdb": "^3.0.0",
     "morgan": "^1.10.0",
