--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
-    "express-ws": "^5.0.2",
+    "fetch": "^1.1.0",
     "lowdb": "^3.0.0",
     "morgan": "^1.10.0",
     "open": "^8.4.0",
