--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "async": "^3.2.4",
+    "body-parser": "^1.20.2",
     "busboy": "^1.6.0",
     "cookie-parser": "^1.4.6",
     "debug": "^2.2.0",
@@ -24,6 +25,7 @@
     "express-session": "^1.17.3",
     "lowdb": "^3.0.0",
     "morgan": "^1.10.0",
+    "node-disk-info": "^1.3.0",
     "open": "^8.4.0",
     "serve-favicon": "^2.5.0",
     "steno": "^2.1.0",
